--- a/app/components/common/welcome/welcome.setup.html
+++ b/app/components/common/welcome/welcome.setup.html
@@ -1,9 +1,6 @@
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <div class="col-xs-12" style="margin-bottom:10px;">
-            <img ng-src="{{welcome.user.profile.linkedin.pictureUrl || welcome.user.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle" onerror="this.style.display='none'"/>
-        </div>
-        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please identify your roles in the community:</h4>
+        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please select one or more roles that you have in the community:</h4>
     </div>
     <div class="panel-body no-padding">
         <div class="list-group ">
