--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -22,14 +22,14 @@
             <h4 style="line-height:1.75;">
                 Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>,
                 your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a>
-                and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline}}</a>.
+                and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline || 'empty'}}</a>.
                 <br/><br/>
-                Here's your summary:
+                Click below to edit your summary:
             </h4>
         </div>
         <div id="summary_form">
             <a editable-textarea="welcome.user.profile.summary" e-rows="12" e-cols="60">
-                <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary}}</pre>
+                <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary || 'Nothing here!'}}</pre>
             </a>
         </div>
 
