--- a/app/components/common/welcome/welcome.skills.html
+++ b/app/components/common/welcome/welcome.skills.html
@@ -14,6 +14,6 @@
         <p style="text-align: center;">Skills are specialized abilities that you possess. They help people find you while searching for experts in the community.</p>
     <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;">
-        <a class="btn btn-info pull-left" ui-sref="welcome.industries">Back</a>
+        <a class="btn btn-info pull-left" ui-sref="welcome.roles">Back</a>
         <a class="btn btn-info pull-right" ui-sref="welcome.profile">Continue</a></h4>
 </div>
