--- a/app/components/common/welcome/welcome.html
+++ b/app/components/common/welcome/welcome.html
@@ -11,7 +11,7 @@
                     <div class="panel-body" style="padding: 20px; border-top: 1px solid #82bc4b;">
                         <div ng-if="!welcome.auth">
                             <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A; font-size: 25px; line-height: 1.25;">Welcome!<br><hr>
-                            You have been invited to join the {{welcome.community}} Startup Community</h4>
+                            You have been invited to join the {{welcome.location}} Startup Community</h4>
                             <h4 class="text-center" style="margin-bottom: 13px;">
                                 <button class="btn btn-info" ng-click="welcome.authenticate()" ng-class="{'disabled' : welcome.working}">Log in using Linkedin</button>
                                 <img ng-show="welcome.working" src="images/loading-bars.svg" width="20" height="20" style="margin-right: -35px; margin-left: 10px;"/>
