--- a/app/less/various.less
+++ b/app/less/various.less
@@ -19,15 +19,15 @@
   cursor: pointer;
 }
 
-#industry_select input.ui-select-search.input-xs {
+.industry_select input.ui-select-search.input-xs {
   font-size: 20px;
 }
 
-#industry_select input.ui-select-search.input-xs::-webkit-input-placeholder { font-size: 16px; line-height: 2;}
-#industry_select input.ui-select-search.input-xs::-moz-placeholder  { font-size: 16px; line-height: 2;}
-#industry_select input.ui-select-search.input-xs:-ms-input-placeholder { font-size: 16px; line-height: 2;}
+.industry_select input.ui-select-search.input-xs::-webkit-input-placeholder { font-size: 16px; line-height: 2;}
+.industry_select input.ui-select-search.input-xs::-moz-placeholder  { font-size: 16px; line-height: 2;}
+.industry_select input.ui-select-search.input-xs:-ms-input-placeholder { font-size: 16px; line-height: 2;}
 
-#industry_select span.ui-select-match-item.btn.btn-default.btn-xs {
+.industry_select span.ui-select-match-item.btn.btn-default.btn-xs {
   font-size: 14px;
 }
 
