--- a/app/less/various.less
+++ b/app/less/various.less
@@ -3,13 +3,14 @@
 
 //for xeditable
 
-#summary_form .editable-buttons {
+.summary_form .editable-buttons {
   display: block;
 }
 
 // for alerts
 .close {
-  line-height: .8;
+  font-size: 16px;
+  line-height: 1;
   color: #333;
   padding-left: 15px;
 }
