--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -9,7 +9,7 @@
         <label id="uploader_text">
             <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
                    accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
-                   ngf-resize="{width: 75, height: 75}" ngf-select="welcome.upload($file)" style="display:none;"/>
+                   ngf-resize="{width: 75, height: 75}" ngf-select="welcome.uploadAvatar($file)" style="display:none;"/>
             <h6>Change picture..</h6>
         </label>
 
@@ -20,16 +20,16 @@
         </div>
         <div>
             <h4 style="line-height:1.75;">
-                Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>,
-                your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a>
+                Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>,<br/>
+                your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a><br/>
                 and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline || 'empty'}}</a>.
                 <br/><br/>
                 Click below to edit your summary:
             </h4>
         </div>
-        <div id="summary_form">
+        <div class="summary_form">
             <a editable-textarea="welcome.user.profile.summary" e-rows="12" e-cols="60">
-                <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary || 'Nothing here!'}}</pre>
+                <pre style="background: none; font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; text-align: left;">{{welcome.user.profile.summary || 'Nothing here!'}}</pre>
             </a>
         </div>
 
