--- a/app/components/common/welcome/welcome.companies.html
+++ b/app/components/common/welcome/welcome.companies.html
@@ -1,25 +1,28 @@
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please add any companies <b>in {{welcome.location}}</b> that you currently work with:</h4>
+        <h4 style="font-size: 25px; line-height: 1.25;">Now add any companies <b>in {{welcome.location}}</b> that you currently work with:</h4>
     </div>
     <div ng-show="welcome.selectedCompany" style="text-align:center;">
-
+        <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">
+            <img style="height:75px;"
+             ngf-thumbnail="welcome.selectedCompany.thumb_url || file || 'images/blank_startup.png'">
+        </a>
         <br/>
         <label id="uploader_text">
-            <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
+            <input type="file" ng-model="logo_thumbnail" name="file" ngf-pattern="'image/*'"
                    accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
                    ngf-resize="{width: 75, height: 75}" ngf-select="welcome.uploadLogo($file)" style="display:none;"/>
-            <h6>Change logo..</h6>
+            <h6>Change thumbnail..</h6>
         </label>
     </div>
     <div style="padding: 20px;">
-        <form role="form" name="welcome.founder.form" novalidate ng-submit="welcome.addCompany()">
+        <form role="form" name="welcome.founder.form" novalidate ng-submit="welcome.addCompany()" style="padding-bottom: 30px;">
             <div class="form-group">
                 <input type="text" ng-model="welcome.company" placeholder="Type a company name.." typeahead="company.name for company in welcome.getCompanies($viewValue)" typeahead-editable="false" typeahead-on-select="welcome.selectedCompany = $item;" class="form-control input-lg">
             </div>
-            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled, 'disabled' : welcome.working}" value="Add {{ welcome.selectedCompany.name || 'Company' }}" />
-            <a ng-show="welcome.selectedCompany && !welcome.working" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined;" style="padding-left: 15px; line-height: 2.5;">cancel</a>
-            <div loading-bars working="welcome.working"></div>
+            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled || welcome.working || !welcome.selectedCompany}" value="{{ 'Add ' + (welcome.updateRole ? 'Your Role' : welcome.selectedCompany.name || 'Company') }}" />
+            <a ng-show="welcome.selectedCompany && !welcome.working" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined; welcome.alert = undefined; welcome.updateRole = false;" style="padding-left: 15px; line-height: 2.5;">cancel</a>
+            <div loading-bars ng-show="welcome.working" style="margin-top:20px;"></div>
         </form>
         <div ng-show="welcome.selectedCompany">
             <h4 style="line-height:1.75;">
