--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -16,7 +16,7 @@
         <div style="margin-left: -10px; padding-top: 1px;">
             <span ng-repeat="(item, val) in welcome.roles" class="user-role"><i
                     ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}"
-                    ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'mentor', 'text-success fa fa-leaf' : item == 'investor', 'text-default fa fa-dribbble' : item == 'team', 'text-warning fa fa-briefcase' : item == 'provider'}"></i></span>
+                    ng-class="{'text-primary fa fa-rocket' : val && item == 'founder', 'text-info fa fa-graduation-cap' : val && item == 'mentor', 'text-success fa fa-leaf' : val && item == 'investor', 'text-default fa fa-dribbble' : val && item == 'team', 'text-warning fa fa-briefcase' : val && item == 'provider'}"></i></span>
         </div>
         <div>
             <h4 style="line-height:1.75;">
