--- a/app/components/common/welcome/welcome.roles.html
+++ b/app/components/common/welcome/welcome.roles.html
@@ -34,5 +34,5 @@
     </div>
     <br>
     <div alert-box this-alert="welcome.alert"></div>
-    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.skills">Continue</a></h4>
+    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.industries">Continue</a></h4>
 </div>
