--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -36,7 +36,7 @@
 
         <div alert-box this-alert="welcome.alert"></div>
         <h4 style="margin-bottom: 13px;">
-            <a class="btn btn-info pull-left" ui-sref="welcome.skills">Back</a>
+            <a class="btn btn-info pull-left" ui-sref="welcome.industries">Back</a>
             <a class="btn btn-info pull-right" ui-sref="welcome.companies">Continue</a></h4>
     </div>
 </div>
