--- a/app/less/forum.less
+++ b/app/less/forum.less
@@ -6,6 +6,7 @@
 
   .panel-body:last-child {
     border-bottom: 1px solid @border-color;
+    height: 80px;
   }
 
   .forum-heading {
@@ -38,14 +39,14 @@
 
   .forum-info {
     text-align: center;
-    line-height: 20px;
-    padding-top: 10px;
+    line-height: 1.1;
+    //padding-top: 10px;
 
     .number {
       display: block;
       font-weight: 600;
       font-size: 22px;
-      margin-top: 5px;
+      //margin-top: 5px;
     }
 
     span {
