--- a/app/components/locations/location.dashboard.html
+++ b/app/components/locations/location.dashboard.html
@@ -7,44 +7,27 @@
                     <h3>Top Industries</h3>
                 </div>
 
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-7 forum-heading">
 
-                            <a ui-sref="#"><h4><i class="fa fa-code"></i> Tech</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Software and hardware products and services.</div>
-                        </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="number">29</span>
-                            <small>Companies</small>
-                        </div>
-                    </div>
-                </div>
+                <div class="panel-body" ng-repeat="industry in location.top.companies.top">
+                    <div class="row" ng-if="location.communities[industry.value]">
+                        <div class="col-xs-10 forum-heading">
 
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-7 forum-heading">
-
-                            <a ui-sref="#"><h4><i class="fa fa-tree"></i> Outdoor</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Products powered by gravity or human strength.</div>
+                            <a ui-sref="industry.dashboard({community_path: location.communities[industry.value].key, community: location.communities[industry.value], query: '*'})">
+                            <span ng-if="location.communities[industry.value].community_profiles[location.location_path]">
+                                <h4><i ng-class="'fa ' + location.communities[industry.value].community_profiles[location.location_path].icon"></i> {{location.communities[industry.value].community_profiles[location.location_path].name}}</h4>
+                            <div class="desc" style="margin-bottom:5px;">{{location.communities[industry.value].community_profiles[location.location_path].headline}}</div>
+                            </span>
+                            <span ng-if="!location.communities[industry.value].community_profiles[location.location_path]">
+                                <h4><i ng-class="'fa ' + location.communities[industry.value].profile.icon"></i> {{location.communities[industry.value].profile.name}}</h4>
+                            <div class="desc" style="margin-top: 4px;">{{location.communities[industry.value].profile.headline}}</div>
+                            </span>
+                            </a>
                         </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="number">9</span>
-                            <small>Companies</small>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-7 forum-heading">
-
-                            <a ui-sref="#"><h4><i class="fa fa-flask"></i> Bio-Science</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Products that leverage biological and pharmaceutical innovations.</div>
-                        </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="number">6</span>
-                            <small>Companies</small>
+                        <div class="col-xs-2 forum-info">
+                            <a ui-sref="company.list({community_path: location.communities[industry.value].key, community: location.communities[industry.value]})">
+                                <span class="number">{{industry.count}}</span>
+                                <small>{{industry.count == 1 ? 'Company' : 'Companies'}}</small>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -58,48 +41,29 @@
                     <h3>Top Networks</h3>
                 </div>
 
-                <div class="panel-body" style="height: 83px;">
+                <div class="panel-body" ng-repeat="network in location.top.people.top" ng-if="location.communities[network.value]">
                     <div class="row">
-                        <div class="col-md-7 forum-heading" style="padding-top: 5px;">
-                            <span class="label label-primary pull-left">Mentor Group</span>
-                            <a ui-sref="#"><h4> Stable of Experts</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Economic Development for Central Oregon (EDCO) list of qualfied startup mentors.</div>
+                        <div class="col-xs-10 forum-heading">
+
+                            <a ui-sref="network.dashboard({community_path: location.communities[network.value].key, community: location.communities[network.value], query: '*'})">
+                            <span ng-if="location.communities[network.value].community_profiles[network.location_path]">
+                                <h4><i ng-class="'fa ' + location.communities[network.value].community_profiles[location.location_path].icon"></i> {{location.communities[network.value].community_profiles[location.location_path].name}}</h4>
+                            <div class="desc" style="margin-bottom:5px;">{{location.communities[network.value].community_profiles[location.location_path].headline}}</div>
+                            </span>
+                            <span ng-if="!location.communities[network.value].community_profiles[location.location_path]">
+                                <h4><i ng-class="'fa ' + location.communities[network.value].profile.icon"></i> {{location.communities[network.value].profile.name}}</h4>
+                            <div class="desc" style="margin-top: 4px;">{{location.communities[network.value].profile.headline}}</div>
+                            </span>
+                            </a>
                         </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="number">134</span>
-                            <small>People</small>
+                        <div class="col-xs-2 forum-info">
+                            <a ui-sref="user.list({community_path: location.communities[network.value].key, community: location.communities[network.value]})">
+                                <span class="number">{{network.count}}</span>
+                                <small>{{network.count == 1 ? 'Person' : 'People'}}</small>
+                            </a>
                         </div>
                     </div>
                 </div>
-
-                <div class="panel-body" style="height: 83px;">
-                    <div class="row">
-                        <div class="col-md-7 forum-heading" style="padding-top: 5px;">
-                            <span class="label label-success pull-left">Accelerator</span>
-                            <a ui-sref="#"><h4> FoundersPad</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Regional accelerator for software companies.</div>
-                        </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="number">18</span>
-                            <small>People</small>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="panel-body" style="height: 84px;">
-                    <div class="row">
-                        <div class="col-md-7 forum-heading" style="padding-top: 5px;">
-                            <span class="label label-warning pull-left">Coworking</span>
-                            <a ui-sref="#"><h4> BendTECH</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Coworking space for tech companies.</div>
-                        </div>
-                        <div class="col-md-1 forum-info">
-                            <span class="number">10</span>
-                            <small>People</small>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
 
@@ -109,22 +73,24 @@
         <div class="col-md-4">
             <div class="hpanel hblue" >
                 <div class="panel-body" style="padding: 10px 5px;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-8">
                         <div class="stats-title pull-left">
-                            <h3>People</h3>
+                            <h3>{{location.top.people.total == 1 ? 'Person' : 'People'}}</h3>
                         </div>
                         <div class="m-t-xl">
-                            <h1 class="text-info">184</h1>
+                            <h1 class="text-info">{{location.top.people.total}}</h1>
                         </div>
                     </div>
-                    <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="loc.charts.people.data" labels="loc.charts.people.labels" series="loc.charts.people.series" colours="loc.charts.people.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
-                        </canvas>
-                    </div>
-                    <div class="col-xs-2">
+                    <div class="col-xs-4">
                         <div class="stats-icon pull-right">
                             <i class="pe-7s-id fa-4x"></i>
                         </div>
+                    </div>
+                </div>
+                <div ng-repeat="item in location.top.people.results" style="margin-top: 10px; border-top: 1px solid #bbb;">
+                    <div class="col-md-12" style="background-color: #FFF; padding-right: 13px;">
+                        <div ng-if="$index == 0" style="padding-top:20px;"></div>
+                        <div class="row"  ng-include="'components/users/user.list.item.html'"></div>
                     </div>
                 </div>
             </div>
@@ -132,72 +98,25 @@
         <div class="col-md-4">
             <div class="hpanel hgreen">
                 <div class="panel-body" style="padding: 10px 5px;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-8">
                         <div class="stats-title pull-left">
-                            <h3>Companies</h3>
+                            <h3>{{location.top.companies.total == 1 ? 'Company' : 'Companies'}}</h3>
                         </div>
                         <div class="m-t-xl">
-                            <h1 class="text-success">79</h1>
+                            <h1 class="text-success">{{location.top.companies.total}}</h1>
                         </div>
                     </div>
-                    <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="loc.charts.companies.data"
-                                labels="loc.charts.companies.labels" series="loc.charts.companies.series" colours="loc.charts.companies.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
-                        </canvas>
-                    </div>
-                    <div class="col-xs-2">
+                    <div class="col-xs-4">
                         <div class="stats-icon pull-right">
                             <i class="pe-7s-power fa-4x"></i>
                         </div>
                     </div>
                 </div>
-                <div class="panel-footer contact-footer">
-                    <div class="row">
-                        <div class="col-md-6 border-right border-bottom">
-                            <div class="stats-title pull-left">
-                                <h6>Tech</h6>
-                            </div>
-                            <div class="stats-icon pull-right">
-                                <i class="fa fa-code" style="opacity: .5;"></i>
-                            </div>
-                            <div style="margin-top:23px;">
-                                <h3 class="text-danger">167</h3>
-                            </div>
-                        </div>
-                        <div class="col-md-6 border-bottom">
-                            <div class="stats-title pull-left">
-                                <h6>Outdoor</h6>
-                            </div>
-                            <div class="stats-icon pull-right">
-                                <i class="fa fa-tree" style="opacity: .5;"></i>
-                            </div>
-                            <div style="margin-top:23px;">
-                                <h3 class="text-danger">71</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 border-right" style="padding-top: 10px;">
-                            <div class="stats-title pull-left">
-                                <h6>Bio-Science</h6>
-                            </div>
-                            <div class="stats-icon pull-right">
-                                <i class="fa fa-flask" style="opacity: .5;"></i>
-                            </div>
-                            <div style="margin-top:23px;">
-                                <h3 class="text-danger">82</h3>
-                            </div>
-                        </div>
-                        <div class="col-md-6" style="padding-top: 10px;">
-                            <div class="stats-title pull-left">
-                                <h6>Med-Tech</h6>
-                            </div>
-                            <div class="stats-icon pull-right">
-                                <i class="fa fa-medkit" style="opacity: .5;"></i>
-                            </div>
-                            <div style="margin-top:23px;">
-                                <h3 class="text-danger">63</h3>
-                            </div>
+                <div>
+                    <div ng-repeat="item in location.top.companies.results" style="margin-top: 10px; border-top: 1px solid #bbb;">
+                        <div class="col-md-12" style="background-color: #FFF; padding-right: 13px;">
+                            <div ng-if="$index == 0" style="padding-top:20px;"></div>
+                            <div class="row"  ng-include="'components/companies/company.list.item.html'"></div>
                         </div>
                     </div>
                 </div>
@@ -206,22 +125,24 @@
         <div class="col-md-4">
             <div class="hpanel hred">
                 <div class="panel-body" style="padding: 10px 5px;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-8">
                         <div class="stats-title pull-left">
                             <h3>Skills</h3>
                         </div>
                         <div class="m-t-xl">
-                            <h1 class="text-danger">325</h1>
+                            <h1 class="text-danger">{{location.top.skills.total}}</h1>
                         </div>
                     </div>
-                    <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="loc.charts.jobs.data"
-                                labels="loc.charts.jobs.labels" series="loc.charts.jobs.series" colours="loc.charts.jobs.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
-                        </canvas>
-                    </div>
-                    <div class="col-xs-2">
+                    <div class="col-xs-4">
                         <div class="stats-icon pull-right">
                             <i class="pe-7s-network fa-4x"></i>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div ng-repeat="item in location.top.skills.top" style="margin-top: 10px; border-top: 1px solid #bbb;">
+                        <div class="col-md-12" style="background-color: #FFF; padding-right: 13px;">
+                            <div class="row">{{item}}</div>
                         </div>
                     </div>
                 </div>
