need to style skills

--- a/app/components/locations/location.dashboard.html
+++ b/app/components/locations/location.dashboard.html
@@ -76,8 +76,6 @@
                     <div class="col-xs-8">
                         <div class="stats-title pull-left">
                             <h3>{{location.top.people.total == 1 ? 'Person' : 'People'}}</h3>
-                        </div>
-                        <div class="m-t-xl">
                             <h1 class="text-info">{{location.top.people.total}}</h1>
                         </div>
                     </div>
@@ -99,10 +97,8 @@
             <div class="hpanel hgreen">
                 <div class="panel-body" style="padding: 10px 5px;">
                     <div class="col-xs-8">
-                        <div class="stats-title pull-left">
+                        <div class="stats-title">
                             <h3>{{location.top.companies.total == 1 ? 'Company' : 'Companies'}}</h3>
-                        </div>
-                        <div class="m-t-xl">
                             <h1 class="text-success">{{location.top.companies.total}}</h1>
                         </div>
                     </div>
@@ -126,10 +122,8 @@
             <div class="hpanel hred">
                 <div class="panel-body" style="padding: 10px 5px;">
                     <div class="col-xs-8">
-                        <div class="stats-title pull-left">
+                        <div class="stats-title">
                             <h3>Skills</h3>
-                        </div>
-                        <div class="m-t-xl">
                             <h1 class="text-danger">{{location.top.skills.total}}</h1>
                         </div>
                     </div>
