--- a/app/less/various.less
+++ b/app/less/various.less
@@ -136,10 +136,11 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 }
 
 .skills {
-  margin-right: 3px;
-  margin-top: 3px;
-  float: left;
-  padding-bottom: 5px;
+  margin: 3px;
+  padding: 5px;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: normal;
 }
 
 .skills-top {
