--- a/app/components/common/welcome/welcome.skills.html
+++ b/app/components/common/welcome/welcome.skills.html
@@ -14,6 +14,6 @@
         <p style="text-align: center;">Industries are markets that you are an expert in. Skills are specific abilities that you possess. They help people find you while searching for experts in the community.</p>
     <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;">
-        <a class="btn btn-info pull-left" ui-sref="welcome.roles">Back</a>
-        <a class="btn btn-info pull-right" ui-sref="welcome.profile">Continue</a></h4>
+        <a class="btn btn-info pull-left" ui-sref="welcome.profile">Back</a>
+        <a class="btn btn-info pull-right" ui-sref="welcome.companies">Continue</a></h4>
 </div>
