--- a/app/components/common/welcome/welcome.roles.html
+++ b/app/components/common/welcome/welcome.roles.html
@@ -1,6 +1,6 @@
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please select one or more roles that you have in the community:</h4>
+        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please select your roles within the community:</h4>
     </div>
     <div class="panel-body no-padding">
         <div class="list-group ">
@@ -34,5 +34,5 @@
     </div>
     <br>
     <div alert-box this-alert="welcome.alert"></div>
-    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.skills">Continue</a></h4>
+    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.profile">Continue</a></h4>
 </div>
