--- a/app/components/common/welcome/welcome.companies.html
+++ b/app/components/common/welcome/welcome.companies.html
@@ -21,19 +21,13 @@
                 <input type="text" ng-model="welcome.company" placeholder="Type a company name.." typeahead="company.name for company in welcome.getCompanies($viewValue)" typeahead-editable="false" typeahead-on-select="welcome.selectedCompany = $item;" class="form-control input-lg">
                 <a style="padding-top: 3px; color: #777;" class="pull-right" ng-click="welcome.notListed()">not listed?</a>
             </div>
-            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled || welcome.working || !welcome.selectedCompany}" value="{{ 'Add ' + (welcome.updateRole ? 'Your Role' : welcome.selectedCompany.name || 'Company') }}" />
-            <a ng-show="welcome.selectedCompany && !welcome.working" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined; welcome.alert = undefined; welcome.updateRole = false; welcome.selectedRole = 'none'; welcome.selectedCluster = 'none';" style="padding-left: 15px; line-height: 2.5;">cancel</a>
+            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled || welcome.working || !welcome.selectedCompany}" value="{{ (welcome.updateCompany ? 'Update ' : 'Add ') + (welcome.selectedCompany.name || 'Company') }}" />
+            <a ng-show="welcome.selectedCompany && !welcome.working" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined; welcome.alert = undefined; welcome.updateRole = false; welcome.selectedRole = 'none'; welcome.selectedCluster = 'none'; welcome.updateCompany = false;" style="padding-left: 15px; line-height: 2.5;">cancel</a>
             <div loading-bars ng-show="welcome.working" style="padding-top: 5px;"></div>
         </form>
-        <div ng-show="!welcome.selectedCompany">
-            <h5 style="line-height:1.75;"><br>
-                Note: You must associate yourself with a company to receive the <i>Founder, Investor, or Team</i> badge.
-            </h5>
-        </div>
         <div ng-show="welcome.selectedCompany">
             <h4 style="line-height:1.75;">
                 Your primary role at <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">{{welcome.selectedCompany.name}}</a> is <a href="#" editable-select="welcome.selectedRole" e-ng-options="r.value as r.text for r in welcome.selectRoles">{{ welcome.showRole() }}</a>.<br/>
-                <!--<span ng-show="welcome.clusters.length">{{welcome.selectedCompany.name}} is part of <a href="#" editable-select="welcome.selectedCluster" e-ng-options="c.key as c.name for c in welcome.clusters">{{  welcome.showCluster() }}</a> <a ng-click="welcome.noCluster()" title="What's a cluster?">industry cluster </a>in {{::welcome.location}}.<br/></span>-->
                 Add up to six industries <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">{{welcome.selectedCompany.name}}</a> is a part of:
                 <div class="panel-body industry_select" style="padding:1px; margin-top: 6px; margin-bottom: 6px;">
                     <ui-select multiple ng-model="welcome.selectedCompany.industries" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on industries with a network in your community." alert_type="warning" style="border:none;">
@@ -43,9 +37,9 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                {{welcome.selectedCompany.name}}'s headline is <a style="color:#4ea5e0;" editable-text="welcome.selectedCompany.high_concept">{{welcome.selectedCompany.high_concept || 'empty'}}</a>.
+                <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">{{welcome.selectedCompany.name}}</a>'s headline is <a style="color:#4ea5e0;" editable-text="welcome.selectedCompany.high_concept">{{welcome.selectedCompany.high_concept || 'empty'}}</a>.
                 <br/><br/>
-                Click below to edit {{welcome.selectedCompany.name}}'s summary:
+                Click below to edit <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">{{welcome.selectedCompany.name}}</a>'s summary:
             </h4>
             <div class="summary_form">
                 <a editable-textarea="welcome.selectedCompany.product_desc" e-rows="12" e-cols="60">
